# ComputacionGraficaAvanzada

./: .gitignore  CMakeLists.txt  ComputacionGraficaAvanzada.sdf  ComputacionGraficaAvanzada.sln
.metadata/: version.ini
00-Introduccion/: 00-Introduccion.vcxproj  CMakeLists.txt
01-AnimacionKeyFrames/: 01-AnimacionKeyFrames.vcxproj  01-AnimacionKeyFrames.vcxproj.filters  CMakeLists.txt
01-AnimacionKeyFrames/src/: main.cpp
01-ManejoVentanasGLFW/: .cproject  .project  01-ManejoVentanasGLFW.vcxproj  01-ManejoVentanasGLFW.vcxproj.filters
01-PrimerVentanaGLFW/: 01-PrimerVentanaGLFW.vcxproj
02-BuffersVBO/: .cproject  .project  02-BuffersVBO.vcxproj
02-IntroOpenGL/: .cproject  .project  02-IntroOpenGL.vcxproj
02-ManejoEventos/: 02-ManejoEventos.vcxproj  02-ManejoEventos.vcxproj.filters
02-SkeletonAnimation/: .project  01-AnimacionKeyFrames.vcxproj  02-AnimacionKeyFrames.vcxproj  02-SkeletonAnimation.vcxproj  CMakeLists.txt
03-SistemasCoordenados/: .cproject  .project  03-SistemasCoordenados.vcxproj  03-SistemasCoordenados.vcxproj.filters
03-Terrain/: .project  03-Terrain.vcxproj  CMakeLists.txt
03-Triangulo/: 03-Triangulo.vcxproj
04-ModeladoGeometrico/: .cproject  .project  04-ModeladoGeometrico.vcxproj  04-ModeladoGeometrico.vcxproj.filters
04-TerrainBlendMap/: .project  04-TerrainBlendMap.vcxproj  CMakeLists.txt
04-TerrainBlendMap/src/: main.cpp
04-TrianguloColorEnDosBuffers/: 04-TrianguloColorEnDosBuffers.vcxproj  04-TrianguloColorEnDosBuffers.vcxproj.filters
05-ModeladoJerarquico/: .cproject  .project  05-ModeladoJerarquico.vcxproj  05-ModeladoJerarquico.vcxproj.filters
05-MultipleLights/: .cproject  .project  05-MultipleLights.vcxproj  CMakeLists.txt
05-Rectangulo/: 05-Rectangulo.vcxproj
06-CameraTPS/: .project  06-CameraTPS.vcxproj  CMakeLists.txt
06-Indices/: 06-Indices.vcxproj
06-Texturizado/: .cproject  .project  06-Texturizado.vcxproj  06-Texturizado.vcxproj.filters
07-AtributosVertices/: 07-AtributosVertices.vcxproj
07-Colisiones/: .project  07-Colisiones.vcxproj  CMakeLists.txt
07-Colisiones/Vid/: Video Evidencia de Practica 07.mkv
07-Colisiones/src/: main.cpp
07-Iluminacion_1/: .cproject  .project  07-Iluminacion_1.vcxproj  07-Iluminacion_1.vcxproj.filters
08-DepthTesting/: .project  08-DepthTesting.vcxproj  CMakeLists.txt
08-Iluminacion_2/: .cproject  .project  08-Iluminacion_2.vcxproj  08-Iluminacion_2.vcxproj.filters
08-ShadersEnObjeto/: 08-ShadersEnObjeto.vcxproj  08-ShadersEnObjeto.vcxproj.filters
09-Blending/: .project  09-Blending.vcxproj  09-Blending.vcxproj.filters  CMakeLists.txt
09-Modelos/: .cproject  .project  09-Modelos.vcxproj  09-Modelos.vcxproj.filters
09-Uniforms/: 09-Uniforms.vcxproj  09-Uniforms.vcxproj.filters
10-Animacion/: .cproject  .project  10-Animacion.vcxproj  10-Animacion.vcxproj.filters
10-Fog/: .project  10-Fog.vcxproj  CMakeLists.txt
10-Fog/src/: main.cpp
10-Transformaciones/: 10-Transformaciones.vcxproj  10-Transformaciones.vcxproj.filters
11-AnimacionKeyFrames/: .cproject  .project  11-AnimacionKeyFrames.vcxproj  11-AnimacionKeyFrames.vcxproj.filters
11-LoadTexture/: 11-LoadTexture.vcxproj  11-LoadTexture.vcxproj.filters
11-OpenAL/: CMakeLists.txt
11-Particulas/: .project  11-Particulas.vcxproj
12-MultiTexturas/: 12-MultiTexturas.vcxproj  12-MultiTexturas.vcxproj.filters
12-MultiplesTexturas/: .cproject  .project  12-MultiplesTexturas.vcxproj  12-MultiplesTexturas.vcxproj.filters
12-ParticulasFeedback/: .project  12-ParticulasFeedback.vcxproj
12-ShadowMapping/: CMakeLists.txt
13-CameraTPS/: .cproject  .project  13-CameraTPS.vcxproj
13-Particulas/: CMakeLists.txt
13-ShadowMapping/: .project  13-ShadowMapping.vcxproj
13-SistemaCoordenadas/: 13-SistemaCoordenadas.vcxproj  13-SistemaCoordenadas.vcxproj.filters
14-Colisiones/: .cproject  .project  14-Colisiones.vcxproj
14-OpenAL/: .cproject  .project  14-OpenAL.vcxproj
14-RotarCuboConMVP/: 14-RotarCuboConMVP.vcxproj  14-RotarCuboConMVP.vcxproj.filters
15-CamaraBasica/: 15-CamaraBasica.vcxproj
15-DepthTesting/: .cproject  .project  15-DepthTesting.vcxproj
15-JoyController/: .cproject  .project
16-Blending/: .cproject  .project  16-Blending.vcxproj  16-Blending.vcxproj.filters
16-CamaraCircular/: 16-CamaraCircular.vcxproj
16-FontRendering/: .cproject  .project
17-CamaraFPS/: 17-CamaraFPS.vcxproj  17-CamaraFPS.vcxproj.filters
17-FrameBuffers/: 17-FrameBuffers.vcxproj
18-CamaraTPS/: 18-CamaraTPS.vcxproj
18-Particulas/: .cproject  .project  18-Particulas.vcxproj
19-CargadorModelos/: 19-CargadorModelos.vcxproj  19-CargadorModelos.vcxproj.filters
19-ParticulasFeedback/: .cproject  .project  19-ParticulasFeedback.vcxproj
20-Colores/: 20-Colores.vcxproj  20-Colores.vcxproj.filters
20-ShadowMapping/: .cproject  .project  20-ShadowMapping.vcxproj
21-IluminacionBasica/: 21-IluminacionBasica.vcxproj  21-IluminacionBasica.vcxproj.filters
21-OpenAL/: .cproject  .project  21-OpenAL.vcxproj
22-AnimationModel/: .cproject  .project  22-AnimationModel.vcxproj  22-AnimationModel.vcxproj.filters
22-Materiales/: 22-Materiales.vcxproj  22-Materiales.vcxproj.filters
23-PropiedadesLuzMateriales/: 23-PropiedadesLuzMateriales.vcxproj  23-PropiedadesLuzMateriales.vcxproj.filters
23-Terrain/: .cproject  .project  23-Terrain.vcxproj  23-Terrain.vcxproj.filters
24-DiferentesColoresLuzMateriales/: 24-DiferentesColoresLuzMateriales.vcxproj  24-DiferentesColoresLuzMateriales.vcxproj.filters
CGALib/: .project  CGALib.vcxproj  CGALib.vcxproj.filters  CMakeLists.txt
CGALib/ide/CGALib/: .cproject  .project
CGALib/include/Headers/: AbstractModel.h  AnimationUtils.h  Bones.h  Box.h  Camera.h  Colisiones.h  Cylinder.h  FirstPersonCamera.h  FontTypeRendering.h  GameObject.h  Mesh.h  Model.h  Shader.h  ShadowBox.h  Sphere.h  Terrain.h  Texture.h  ThirdPersonCamera.h  TimeManager.h  mathUtil.h
CGALib/src/: Box.cpp  Cylinder.cpp  FontTypeRendering.cpp  Model.cpp  Shader.cpp  ShadowBox.cpp  Sphere.cpp  Terrain.cpp  Texture.cpp  ThirdPersonCamera.cpp  TimeManager.cpp
Shaders/: colorShader.fs  (+66 more)
(+423 files in other folders)
