cmake_minimum_required(VERSION 3.0.0)
project(CGA VERSION 0.1.0 LANGUAGES C CXX)

add_subdirectory(CGALib)
add_subdirectory(00-Introduccion)
add_subdirectory(01-AnimacionKeyFrames)
add_subdirectory(02-SkeletonAnimation)
add_subdirectory(03-Terrain)
add_subdirectory(04-TerrainBlendMap)
add_subdirectory(05-MultipleLights)
add_subdirectory(06-CameraTPS)
add_subdirectory(07-Colisiones)
add_subdirectory(08-DepthTesting)
add_subdirectory(09-Blending)
add_subdirectory(10-Fog)
add_subdirectory(11-OpenAL)
add_subdirectory(12-ShadowMapping)
add_subdirectory(13-Particulas)